@@ -7,5 +7,29 @@
     "expires_in":28800,
     "state":"123",
     "token_type":"Bearer"
+  },
+  "api_cache_data": {
+    "data" : {
+      "id_s" : "492932005972429",
+      "calendar_enabled" : true,
+      "backseat_token_updated_at" : null,
+      "state" : "online",
+      "id" : 1492932005972429,
+      "api_version" : 36,
+      "tokens" : [
+        "089956bbfcfe61ef",
+        "fd418789dffe54fc"
+      ],
+      "access_type" : "OWNER",
+      "in_service" : false,
+      "vehicle_id" : 896783052,
+      "option_codes" : "AD15,MDL3,PBSB,RENA,BT37,ID3W,RF3G,S3PB,DRLH,DV2W,W39B,APF0,COUS,BC3B,CH07,PC30,FC3P,FG31,GLFR,HL31,HM31,IL31,LTPB,MR31,FM3B,RS3H,SA3P,STCP,SC04,SU3C,T3CA,TW00,TM00,UT3P,WR00,AU3P,APH3,AF00,ZCST,MI00,CDM0",
+      "vin" : "999999999999999",
+      "color" : null,
+      "backseat_token" : null,
+      "display_name" : "Dream machine"
+    },
+    "id" : "492932005972429",
+    "endpoint" : "VEHICLE_SUMMARY"
   }
 }
